    are kept in or somewhere below the `specs/` directory of your project.

  - The report and progress formatters now display file:line:expectation:
    annotations for failed and pending expectations in verbose mode (-v).

  - New command line option `--fail-fast` (or `-1`) to stop checking
    expectations immediately on the first failure, rather than
    continuing and showing all failures.

  - You can now filter out all but the examples at a specified line
    number either by pasting from the output of a failed or pending
    expectation in verbose mode, by invoking specl as:

        specl specs/some_spec.yaml:44:1

    or with as many `+NN` as necessary to select several examples from
    the following file:

        specl +44 +48 specs/some_spec.yaml

    or a combination of the above. Note that the final `:1` in the
    former is ignored and can be omitted (it is the ordinal number of an
    `expect` statement in a given example), but is accepted for ease of
    cutting and pasting.

  - From this release out, matchers using `to_` are preferred to using
    `should_`.  When negating a new syntax `to_` matcher, both of
    `to_not_` and `not_to` are accepted.

  - You can `require "specl.shell"` for a swathe of additional matchers
    to specify results from a `Process` object:

      a) For exit statuses, use:

           expect (shell.spawn "exit 42").to_exit (42)
           expect (shell.spawn "exit 0").to_succeed ()
           expect (shell.spawn "/bin/false").to_fail ()

      b) For checking the contents of the output stream, use:

           expect (...).to_output "exact content"
           expect (...).to_output_containing  "substring"
           expect (...).to_output_matching "pattern"

      d) To require zero exit status with specified output stream
         contents:

           expect (...).to_succeed_with "exact content"
           expect (...).to_succeed_while_containing "substring"